# qcDB

./: .gitignore  CMakeLists.txt
common/: DBHeader.hh  Retcode.hh
dbGenerator/inc/: ObjectSchema.hh
dbGenerator/src/: Schema.cpp  main.cpp
dbHeaders/: CHARACTER.hh
dbinspect/: CMakeLists.txt
dbinspect/src/: main.cpp
docs/superpowers/plans/: 2026-05-21-chunked-mmap.md
docs/superpowers/specs/: 2026-05-21-chunked-mmap-design.md
qcDB/: qcDB.hh
schemaFiles/: character.skm
testDB/src/: main.cpp
unitTest/: CMakeLists.txt
unitTest/src/: main.cpp
